--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
+  "engines": {
+    "node": ">= 14.16.0",
+    "npm": "use Yarn instead of Npm",
+    "yarn": ">= 1.22.10"
+  },
   "dependencies": {
     "@nuxtjs/markdownit": "^1.2.9",
     "contentful": "^7.14.2",
     "dotenv": "^8.2.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^6.0.1",
     "nuxt": "^2.0.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^10.1.1"
   },
   "devDependencies": {}
 }
